[package]
name = "mini-ledger"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust_decimal = "1.15.0"
nom = "6.0.1"
thiserror = "1.0.23"
